[PLANET-1707] Fix spacing on various pages

--- a/assets/scss/common/_campaign-thumbnail-block.scss
+++ b/assets/scss/common/_campaign-thumbnail-block.scss
@@ -11,13 +11,11 @@
   }
 
   @include large-and-up {
-    padding-top: 0;
     padding-bottom: 60px;
   }
 
   @include x-large-and-up {
-    padding-top: 0;
-    margin-bottom: 80px;
+    margin-bottom: 0;
   }
 
   h2 {
